# GLEngine

./: .gitattributes  .gitignore  .travis.yml  404.html  CMakeLists.txt  DEPS_README.txt  LICENSE  OLDREADME.txt  README.md  index.html  makefile  mkdocs.yml  sitemap.xml
CPPML/: .gitignore  CMakeLists.txt  README.md
CPPML/include/CPPML/: Loading.hpp  Log.hpp  Useful.hpp
CPPML/src/: Loading.cpp  Log.cpp  OBJ.cpp  Useful.cpp
CPPModelLibrary/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  makefile  mkdocs.yml
CPPModelLibrary/docs/: index.md
CPPModelLibrary/include/CPPML/: useful.hpp
CPPModelLibrary/include/CPPML/loading/: OBJ.hpp
CPPModelLibrary/include/CPPML/logging/: Log.hpp  logging.hpp
CPPModelLibrary/src/: CMakeLists.txt  useful.cpp
CPPModelLibrary/src/loading/: OBJ.cpp  loading.cpp
CPPModelLibrary/src/logging/: Log.cpp
CPPModelLibrary/test/: CMakeLists.txt  test.cpp
contributing/: index.html
docs/: index.md  license.md
docs/contributing/: index.md
docs/gettingstarted/: index.md
docs/reference/: graphics.md  index.md
docs/source/: conf.py  index.rst
examples/: glfwExample1.cpp  glfwExample2.cpp  testingExample1.cpp
examples/spike/: FunctionPointers1.cpp
examples/spike/ClassExample/: myclass-fwd.hpp  myclass.hpp
gettingstarted/: index.html
glew-2.1.0/: MB-readme.txt
glew-2.1.0/lib/Debug/Win32/: glew32sd.lib
glew-2.1.0/lib/Debug/x64/: glew32sd.lib
glew-2.1.0/lib/Release/Win32/: glew32s.lib
glew-2.1.0/lib/Release/x64/: glew32s.lib
imgui/: GLENGINE_NOTE.txt
include/GLEngine/: defines.hpp  exceptions.hpp
include/GLEngine/graphics/: Camera.hpp  DirectionalLight.hpp  GameObject.hpp  Image.hpp  ImageHandler.hpp  Material.hpp  Model.hpp  ModelHandler.hpp  ModelLoading.hpp  PointLight.hpp  Renderer.hpp  ResourceManager.hpp  Scene.hpp  ShaderProgram.hpp  SpotLight.hpp  Texture.hpp  Transform.hpp  WindowHandler.hpp  graphics.hpp
include/GLEngine/input/: Input.hpp
include/GLEngine/io/: io.hpp
include/GLEngine/logging/: Log.hpp  logging.hpp
include/GLEngine/math/: Mat4f.hpp  MathFloat.hpp  Matxf-fwd.hpp  Matxf.hpp  Vec2f-fwd.hpp  Vec2f.hpp  Vec3f-fwd.hpp  Vec3f.hpp  Vec4f-fwd.hpp  Vec4f.hpp  math.hpp
include/imgui/: imconfig.h
include/stb/: stb_image.h
license/: index.html
reference/: index.html
reference/graphics/: index.html
reference/input/: index.html
reference/logging/: index.html
reference/math/: index.html
resources/shaders/: depth-frag1.frag  depth-vert1.vert  frag1.frag  frag1.glsl  vert1.glsl
resources/shaders/disp-shadowmap/: vert1.vert
search/: search_index.json
spike/: GLEngineErrors.hpp  HeaderExample.hpp  Sizes.cpp
spike/ClassExample/: myclass.cpp
src/: CMakeLists.txt  main.cpp
src/GLEngine/graphics/: Camera.cpp  DirectionalLight.cpp  GameObject.cpp  Image.cpp  ImageHandler.cpp  Material.cpp  Model.cpp  ModelHandler.cpp  ModelLoading.cpp  PointLight.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  ShaderProgram.cpp  SpotLight.cpp  Texture.cpp  Transform.cpp  WindowHandler.cpp
src/GLEngine/input/: Input.cpp
src/GLEngine/io/: io.cpp
src/GLEngine/logging/: Log.cpp
src/GLEngine/math/: Mat4f.cpp  MathFloat.cpp  Vec2f.cpp  Vec3f.cpp  Vec4f.cpp  math.cpp
src/GLEngine/tests/: test_sets.hpp
src/io/: io.cpp
src/logging/: Log.cpp
src/math/: Matxf.cpp  Vec2f.cpp  Vec3f.cpp  Vec4f.cpp
src/tests/: test_sets.hpp  tests.cpp
test/: CMakeLists.txt
test/resources/shaders/: vert1.vert
test/resources/shaders/disp-shadowmap/: frag1.frag
test/src/: main.cpp
